--- a/about.qmd
+++ b/about.qmd
@@ -6,6 +6,9 @@ about:
     - icon: github
       text: Github
       href: https://github.com/josiahparry
+    - icon: youtube
+      text: YouTube
+      href: https://www.youtube.com/@josiahparry
     - icon: mastodon
       text: Mastodon
       href: https://mapstodon.space/web/@josiah
