more stuff for tweitter cards hopefully'

--- a/posts/2023-03-01-rust-traits-for-r-programmers/index.qmd
+++ b/posts/2023-03-01-rust-traits-for-r-programmers/index.qmd
@@ -3,6 +3,7 @@ title: "Rust traits for R users"
 subtitle: "and how they'll make your package better"
 categories: [rust, r, package-development, tutorial]
 date: 2023-03-02
+image: "feRris.svg"
 ---
 
 
