--- a/index.qmd
+++ b/index.qmd
@@ -8,7 +8,7 @@ listing:
     categories: false
     #type: grid
     page-size: 6
-    fields: [title, description]
+    fields: [title, description, date, categories]
     contents: 
       - "/posts*/!(index).*md"
       - "/posts/*/*.qmd"
