--- a/posts/csr.qmd
+++ b/posts/csr.qmd
@@ -6,7 +6,9 @@ tags: [rspatial]
 ---
 
 < this is a cliche about Tobler's fist law and things being related
-in space>. Because of Tobler's first law, spatial data tend to not follow any
+in space>. 
+
+Because of Tobler's first law, spatial data tend to not follow any
 specific distribution. So, p-values are sort of...not all that accurate most of the time. 
 P-values in spatial statistics often take a "non-parametric" approach instead
 of an "analytical" one. 
