--- a/posts/2023-08-22-valve-for-production/2023-08-22-valve-for-production.qmd
+++ b/posts/2023-08-22-valve-for-production/2023-08-22-valve-for-production.qmd
@@ -2,6 +2,7 @@
 title: "Valve: putting R in production"
 date: 2023-08-22
 categories: [rust, r, production]
+freeze: true
 ---
 
 This blog post is based on my most recent YouTube video. Please give it a watch! 
