--- a/posts/2024-06-25-handle-files-plumber/index.qmd
+++ b/posts/2024-06-25-handle-files-plumber/index.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Read a CSV in a production API"
+subtitle: "{plumber} and multipart request #RinProd"
 date: "2024-06-25"
-subtile: "{plumber} and multipart request #RinProd"
 categories: [plumber, r, prod]
 ---
 
